--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
 }
 
 .App-header {
-	background-color: #708099;
+	background-color: rgb(57, 81, 109);
 	color: white;
 	font-size: 18px;
 	padding-top: 5px;
-	padding-bottom: 20px;
+	padding-bottom: 4px;
 	padding-left: 20px;
 	margin-bottom: 0;
 }
