--- a/src/components/graphEditor/style.css
+++ b/src/components/graphEditor/style.css
@@ -77,7 +77,7 @@ div.tbContainer {
 	background: rgb(57, 81, 109);
 }
 
-div.container {
+.container {
 	background: url('../../assets/images/grid.png');
 	position: absolute;
 	overflow: hidden;
@@ -85,9 +85,9 @@ div.container {
 	left: 56px;
 	bottom: 0px;
 	right: 0px;
-	margin: 0px;
-	padding: 20px;
 	max-width: 100%;
+	padding: 0px;
+	margin: 0px;
 }
 
 * {
