try to save children, change calc window to modal -> keep graphMOdel

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
 	background-color: rgb(57, 81, 109);
 	color: white;
 	font-size: 18px;
-	padding-top: 5px;
-	padding-bottom: 4px;
-	padding-left: 20px;
+	padding: 5px 0px 4px 20px;
 	margin-bottom: 0;
 }
