--- a/src/components/graphEditor/style.css
+++ b/src/components/graphEditor/style.css
@@ -88,6 +88,7 @@ div.tbContainer {
 	max-width: 100%;
 	padding: 0px;
 	margin: 0px;
+	margin: 2px 6px;
 }
 
 * {
@@ -110,4 +111,5 @@ div.mxWindow {
 	left: 0px;
 	bottom: 0px;
 	right: 0px;
+	margin: 5px 2px;
 }
