--- a/src/helpers/graph/style.css
+++ b/src/helpers/graph/style.css
@@ -3,16 +3,29 @@
 	height: 40px;
 	object-fit: scale-down;
 	padding-left: 3px;
+	margin-bottom: 10px;
 }
 
 .loaded {
 	width: 50px;
 	height: 50px;
 	object-fit: scale-down;
+	margin-bottom: 10px;
 }
 
-#graphContainer {
-	width: 100%;
+.input {
+	width: 40px;
+	height: 40px;
+	object-fit: scale-down;
+	padding-left: 3px;
+	margin-bottom: 5px;
+}
+
+.switcher {
+	width: 40px;
+	height: 40px;
+	object-fit: scale-down;
+	padding-left: 3px;
 }
 
 .mOfn {
@@ -20,6 +33,11 @@
 	height: 30px;
 	object-fit: scale-down;
 	padding-left: 8px;
+	margin-top: 10px;
+}
+
+#graphContainer {
+	width: 100%;
 }
 
 .node {
