--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
 .App {
-	font-family: "Gill Sans", sans-serif;
-	margin: 0;
-	display: flex;
-	flex-flow: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
+    font-family: 'Gill Sans', sans-serif;
+    margin: 0;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .App-header {
-	background-color: rgb(57, 81, 109);
-	color: white;
-	font-size: 18px;
-	padding: 5px 0px 4px 20px;
-	margin-bottom: 0;
+    background-color: rgb(57, 81, 109);
+    color: white;
+    font-size: 18px;
+    padding: 5px 0px 4px 20px;
+    margin-bottom: 0;
 }
