--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,29 @@
 body {
-	margin: 0;
-	font-family: "Gill Sans", sans-serif !important;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 5%, rgba(0,212,255,1) 100%) !important;
+    margin: 0;
+    font-family: 'Gill Sans', sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(
+        270deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(9, 9, 121, 1) 5%,
+        rgba(0, 212, 255, 1) 100%
+    ) !important;
 }
 
 code {
-	font-family: "Gill Sans", sans-serif;
+    font-family: 'Gill Sans', sans-serif;
 }
 
 #root {
-	width: 100%;
-	display: flex;
-	justify-content: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
