--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 .App-header {
     background-color: rgb(57, 81, 109);
     color: white;
-    font-size: 18px;
-    padding: 5px 0px 4px 20px;
+    font-size: 32px;
+    padding: 20px 30px;
     margin-bottom: 0;
 }
